[gd_scene load_steps=26 format=3 uid="uid://bewv6rr5wbnj6"]

[ext_resource type="Script" uid="uid://b81eq0a6ik4bw" path="res://Secnes/Overworld/player/player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dvqb4x8ga6eie" path="res://Sprites/overworld/player/3.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dh5ygnt12bcq6" path="res://Sprites/overworld/player/5.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b1vk18pb6yay7" path="res://Sprites/overworld/player/9.png" id="4"]
[ext_resource type="Texture2D" uid="uid://b88u2aliit507" path="res://Sprites/overworld/player/13.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cc8espc88ulgw" path="res://Sprites/overworld/player/0.png" id="6"]
[ext_resource type="Texture2D" uid="uid://c7uchaxyd3qhi" path="res://Sprites/overworld/player/1.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bxu4qdnt5sf5w" path="res://Sprites/overworld/player/2.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dxoq06p7sbgh7" path="res://Sprites/overworld/player/4.png" id="9"]
[ext_resource type="Texture2D" uid="uid://px2ti3cuxmj4" path="res://Sprites/overworld/player/6.png" id="10"]
[ext_resource type="Texture2D" uid="uid://nibjobyrj7d1" path="res://Sprites/overworld/player/7.png" id="11"]
[ext_resource type="Texture2D" uid="uid://bgqjhx7wgotbu" path="res://Sprites/overworld/player/8.png" id="12"]
[ext_resource type="Texture2D" uid="uid://by8li1155ykdi" path="res://Sprites/overworld/player/10.png" id="13"]
[ext_resource type="Texture2D" uid="uid://ydw0urck4s5p" path="res://Sprites/overworld/player/11.png" id="14"]
[ext_resource type="Texture2D" uid="uid://bx6ranh5aoln1" path="res://Sprites/overworld/player/12.png" id="15"]
[ext_resource type="Texture2D" uid="uid://g2eyob5n356w" path="res://Sprites/overworld/player/14.png" id="16"]
[ext_resource type="Texture2D" uid="uid://bmsnsuo4ntpsi" path="res://Sprites/overworld/player/15.png" id="17"]
[ext_resource type="Script" uid="uid://cufjp1afuxswv" path="res://Secnes/Overworld/player/hp.gd" id="18"]
[ext_resource type="Texture2D" uid="uid://c4n3tokjtmiit" path="res://Sprites/UI/HP.png" id="19"]
[ext_resource type="Texture2D" uid="uid://w3ukewq3w5ue" path="res://Sprites/pixel.png" id="20"]
[ext_resource type="FontFile" uid="uid://c4egpres5rovo" path="res://Fonts/ui.ttf" id="21"]
[ext_resource type="PackedScene" uid="uid://sailyk6smwaj" path="res://Secnes/Overworld/menu/menu.tscn" id="22_h57il"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kgqd"]
size = Vector2(42, 58)

[sub_resource type="SpriteFrames" id="SpriteFrames_um37g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5")
}],
"loop": true,
"name": &"idle_up",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}, {
"duration": 1.0,
"texture": ExtResource("7")
}, {
"duration": 1.0,
"texture": ExtResource("8")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"walk_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("3")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}],
"loop": true,
"name": &"walk_left",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("13")
}, {
"duration": 1.0,
"texture": ExtResource("14")
}],
"loop": true,
"name": &"walk_right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("5")
}, {
"duration": 1.0,
"texture": ExtResource("16")
}, {
"duration": 1.0,
"texture": ExtResource("17")
}],
"loop": true,
"name": &"walk_up",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rd8k6"]
size = Vector2(43, 56)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0kgqd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_um37g")
animation = &"walk_down"
frame_progress = 0.363958

[node name="CheckArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckArea"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_rd8k6")

[node name="HpLayer" type="CanvasLayer" parent="."]
layer = 9
script = ExtResource("18")

[node name="Main" type="Node2D" parent="HpLayer"]

[node name="Hp" type="Sprite2D" parent="HpLayer/Main"]
visible = false
position = Vector2(15, 499)
texture = ExtResource("19")
offset = Vector2(0.5, 0)

[node name="HpBottom" type="Sprite2D" parent="HpLayer/Main"]
modulate = Color(1, 0, 0, 1)
position = Vector2(16, 498)
texture = ExtResource("20")
offset = Vector2(0.5, 0)

[node name="HpTop" type="Sprite2D" parent="HpLayer/Main"]
modulate = Color(1, 1, 0, 1)
position = Vector2(16, 498)
texture = ExtResource("20")
offset = Vector2(0.5, 0)

[node name="HpNumber" type="Label" parent="HpLayer/Main"]
offset_left = 127.0
offset_top = 488.0
offset_right = 167.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("21")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuLayer" type="CanvasLayer" parent="."]
layer = 9

[node name="Menu" parent="MenuLayer" instance=ExtResource("22_h57il")]
visible = false

[connection signal="area_entered" from="CheckArea" to="." method="_on_check_area_area_entered"]
[connection signal="area_exited" from="CheckArea" to="." method="_on_check_area_area_exited"]
